[package]
name = "lambda_utils"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/MadeByae/lambda-utils"
description = "Lambda Utils for AWS Rust Lambda"
authors = ["Ae <hi@angel-estrada.com>"]
keywords = ["aws", "lambda", "serverless", "rust"]
categories = ["utils"]
license = "MIT"

[dependencies]
aws-config = { version = "1.1.2", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.9.0"
aws-types = "1.1.2"
aws_lambda_events = "0.7.2"
lambda_http = "0.7.0"
mongodb = "2.3.1"
once_cell = "1.17.0"
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = ["full", "test-util"] }
